--- a/.gitignore
+++ b/.gitignore
@@ -160,15 +160,15 @@ cython_debug/
 #.idea/
 
 # React JS dependencies
-/node_modules
-/.pnp
+*/node_modules
+*/.pnp
 .pnp.js
 
 # testing
-/coverage
+*/coverage
 
 # production
-/build
+*/build
 
 # misc
 .DS_Store
